<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTrangChu"
    android:orientation="vertical"
    android:padding="4dp">

    <RadioGroup
        android:id="@+id/rbgroup_tab_moinhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_moinhat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/hot_4"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/tab_moinhat"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/rb_gantoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/location_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/gantoi"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/rb_giaohang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/shipping_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/giaohang"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup" />


            <RadioButton
                android:id="@+id/rb_khuyenmai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"

                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/money_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/khuyenmai"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup" />


    </RadioGroup>



</LinearLayout>
