<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTrangChu"
    android:orientation="vertical"
    android:padding="4dp">

    <RadioGroup
        android:id="@+id/rbgroup_tab_danhmuc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <RadioButton
                android:id="@+id/rb_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/good_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/hot"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/rb_dacsan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/dacsan_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/dacsan"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup" />

            <RadioButton
                android:id="@+id/rb_monlau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/soup_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/monlau"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup" />

            <RadioButton
                android:id="@+id/rb_monnuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/nuong_24"
                android:drawablePadding="10dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/monnuong"
                android:textAllCaps="false"
                android:textColor="@drawable/changtextcolor_radiobutton_popup" />

    </RadioGroup>



</LinearLayout>
